--- a/vaxjo_nav/index.html
+++ b/vaxjo_nav/index.html
@@ -25,7 +25,7 @@
                     <li>
                         <div class="menu-item">
                             <i class="fas fa-globe"></i>
-                            <p class="menu-text">Trabslate</p>
+                            <p class="menu-text">Translate</p>
                         </div>
                     </li>
                     <li>
